objects/App_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paypal_Key__c</fullName>
        <label>Paypal Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Id__c</fullName>
        <label>Secret Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App_Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{000000000}</displayFormat>
        <label>App_Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App_Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>